force-app/main/default/objects/numm__ThirdParty__c/numm__ThirdParty__c.object-meta.xml
<CustomObject>
    <description>Liste des tiers</description>
    <label>Tiers</label>
    <nameField>
        <label>Nom du tiers</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>