force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Adresse_3__c.field-meta.xml
<CustomField>
    <fullName>numm__Adresse_3__c</fullName>
    <label>Adresse 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>