force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Adresse_email__c.field-meta.xml
<CustomField>
    <fullName>numm__Adresse_email__c</fullName>
    <label>Adresse email</label>
    <type>Email</type>
</CustomField>