force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Civilite__c.field-meta.xml
<CustomField>
    <fullName>numm__Civilite__c</fullName>
    <inlineHelpText>Lorsque le tiers est une personne physique, sélectionner sa civilité</inlineHelpText>
    <label>Civilité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monsieur</fullName>
            </value>
            <value>
                <fullName>Madame</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>