force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>numm__Code_Postal__c</fullName>
    <label>Code Postal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>