force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Code_Tiers_externe__c.field-meta.xml
<CustomField>
    <fullName>numm__Code_Tiers_externe__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Utile pour éviter les homonymes</inlineHelpText>
    <label>Code Tiers externe</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>