force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Devise__c.field-meta.xml
<CustomField>
    <fullName>numm__Devise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devise</label>
    <referenceTo>numm__currency__c</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>