force-app/main/default/objects/numm__ThirdParty__c/fields/numm__IdCompte__c.field-meta.xml
<CustomField>
    <fullName>numm__IdCompte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lier le tiers au compte CRM Salesforce</inlineHelpText>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>