force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Intra_Groupe__c.field-meta.xml
<CustomField>
    <fullName>numm__Intra_Groupe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>si le tiers crée est un intra-groupe, cocher cette case</inlineHelpText>
    <label>Intra-Groupe</label>
    <type>Checkbox</type>
</CustomField>