force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Pays__c.field-meta.xml
<CustomField>
    <fullName>numm__Pays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pays</label>
    <referenceTo>numm__Country__c</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>