force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Prenom__c.field-meta.xml
<CustomField>
    <fullName>numm__Prenom__c</fullName>
    <label>Prénom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>