force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Raison_sociale__c.field-meta.xml
<CustomField>
    <fullName>numm__Raison_sociale__c</fullName>
    <label>Raison sociale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>