force-app/main/default/objects/numm__ThirdParty__c/fields/numm__SIREN__c.field-meta.xml
<CustomField>
    <fullName>numm__SIREN__c</fullName>
    <formula>LEFT( numm__SIRET__c , 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIREN</label>
    <type>Text</type>
</CustomField>