force-app/main/default/objects/numm__ThirdParty__c/fields/numm__SIRET__c.field-meta.xml
<CustomField>
    <fullName>numm__SIRET__c</fullName>
    <label>SIRET</label>
    <length>14</length>
    <type>Text</type>
</CustomField>