force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Telecopie__c.field-meta.xml
<CustomField>
    <fullName>numm__Telecopie__c</fullName>
    <label>Télécopie</label>
    <type>Phone</type>
</CustomField>