force-app/main/default/objects/numm__ThirdParty__c/fields/numm__TelephoneBureau__c.field-meta.xml
<CustomField>
    <fullName>numm__TelephoneBureau__c</fullName>
    <label>Téléphone Bureau</label>
    <type>Phone</type>
</CustomField>