force-app/main/default/objects/numm__ThirdParty__c/fields/numm__TelephoneMobile__c.field-meta.xml
<CustomField>
    <fullName>numm__TelephoneMobile__c</fullName>
    <label>Téléphone Mobile</label>
    <type>Phone</type>
</CustomField>