force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Tva_intra_communautaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Tva_intra_communautaire__c</fullName>
    <label>Tva intra-communautaire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>