force-app/main/default/objects/numm__ThirdParty__c/fields/numm__Ville__c.field-meta.xml
<CustomField>
    <fullName>numm__Ville__c</fullName>
    <label>Ville</label>
    <length>35</length>
    <type>Text</type>
</CustomField>