force-app/main/default/objects/numm__ThirdParty__c/recordTypes/numm__Entreprise.recordType-meta.xml
<RecordType>
    <fullName>numm__Entreprise</fullName>
    <active>true</active>
    <description>Si votre Tiers est une Entreprise</description>
    <label>Entreprise</label>
</RecordType>