force-app/main/default/objects/numm__ThirdParty__c/recordTypes/numm__Particulier.recordType-meta.xml
<RecordType>
    <fullName>numm__Particulier</fullName>
    <active>true</active>
    <description>Si votre Tiers est un Particulier</description>
    <label>Particulier</label>
</RecordType>