force-app/main/default/objects/numm__ThirdParty__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>numm__Code_Tiers_externe__c</columns>
    <columns>numm__IdCompte__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les tiers</label>
    <language>fr</language>
</ListView>